Modificacion del Navbar

--- a/src/front/index.css
+++ b/src/front/index.css
@@ -1,17 +1,19 @@
-
-.imgLogo{
-    height: 120px;
-    width: 100px;
-    margin: auto;
+.imgLogo {
+  height: 120px;
+  width: 100px;
 }
+
 .searchBox {
   margin-right: 12px;
   display: block;
   box-sizing: border-box;
 }
-.search_input {
-  border-radius: 40px;
+
+.searchBox_input {
+  font-size: 1rem;
+  border-radius: 32px;
   height: 40px;
+  padding-right: 16px;
 }
 .checkRegrister,
 .checkPay {
@@ -19,7 +21,4 @@
   height: 40px;
   border-radius: 20px;
   margin-right: 10px;
-}
-.footerLogo{
-    
 }
