--- a/src/front/index.css
+++ b/src/front/index.css
@@ -50,3 +50,11 @@ li {
     margin-right: auto;
     margin-left: auto;
 }
+
+.caption-style {
+  background: rgba(255, 255, 255, 0.047);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 15px;
+  padding: 20px;
+}
