--- a/src/front/index.css
+++ b/src/front/index.css
@@ -71,7 +71,7 @@ a:hover {
 
 .caption-style {
   
-  width: 35%;
+  width: 35rem;
   background: rgba(255, 255, 255, 0.572);
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(15px);
