--- a/src/front/styles/cardProducto.css
+++ b/src/front/styles/cardProducto.css
@@ -1,10 +1,6 @@
-.item-card {
-  scrollbar-width: none;
-  gap: 16px;
-  overflow: scroll hidden;
+.seo-secction{
+  gap: 32px;
 }
-
-
 .product-card {
   width: 400px;
   height: 520px;
@@ -13,7 +9,6 @@
   overflow: hidden; /* Para que las imágenes no sobresalgan */
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
   margin: 10px;
-  overflow: scroll hidden;
 }
 
 .carousel-item img {
@@ -24,6 +19,7 @@
 }
 .select-card:hover {
   cursor: pointer;
+
 }
 
 .card-title {
@@ -35,7 +31,7 @@
 .card-text {
   display: block;
   padding: 5px 10px 0px 10px;
-
+  
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
