--- a/src/front/styles/sectioncard.css
+++ b/src/front/styles/sectioncard.css
@@ -24,17 +24,27 @@
 }
 
 .grid-container {
+  /*
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-auto-flow: column;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 1rem;
+  */
+  --gap: 1rem;
+  display: grid;
+  grid-auto-flow: column;                 /* Avanza por columnas (scroll horizontal) */
+  grid-template-rows: repeat(1, auto);    /* 2 filas fijas */
+  /* 3 columnas visibles: (100% - 2 gaps) / 3  */
+  grid-auto-columns: calc((100% - (var(--gap) * 1)) / 3);
+  gap: var(--gap);
 }
 
+/*
 .grid-container > * {
-  width: 180px; /* Ancho fijo de cada tarjeta */
+  width: 180px; /* Ancho fijo de cada tarjeta 
 }
-
+*/
 .carousel-btn {
   position: absolute;
   top: 45%;
