--- a/src/front/styles/sectioncard.css
+++ b/src/front/styles/sectioncard.css
@@ -23,7 +23,7 @@
   display: none; /* Ocultar barra nativa */
 }
 
-.grid-container {
+.section-card .grid-container {
   /*
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -31,12 +31,12 @@
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 1rem;
   */
-  --gap: 1rem;
+  --gap: 20px;
   display: grid;
   grid-auto-flow: column;                 /* Avanza por columnas (scroll horizontal) */
-  grid-template-rows: repeat(1, auto);    /* 2 filas fijas */
+  grid-template-rows: repeat(2, auto);    /* 2 filas fijas */
   /* 3 columnas visibles: (100% - 2 gaps) / 3  */
-  grid-auto-columns: calc((100% - (var(--gap) * 1)) / 3);
+  grid-auto-columns: calc((100% - (var(--gap) * 2)) / 3);
   gap: var(--gap);
 }
 
@@ -45,6 +45,7 @@
   width: 180px; /* Ancho fijo de cada tarjeta 
 }
 */
+
 .carousel-btn {
   position: absolute;
   top: 45%;
