--- a/src/front/index.css
+++ b/src/front/index.css
@@ -64,3 +64,48 @@
     margin-left: auto;
 }
 
+.mapContiner {
+  width: 100%;
+  height: 20rem;
+
+  & .map {
+    height: 100%;
+    width: 100%;
+  }
+}
+.autocomplete-container input,
+.autocomplete-control {
+  box-sizing: border-box;
+}
+
+.autocomplete-control {
+  margin: 24px;
+  background: #fff;
+}
+
+.autocomplete-container {
+  width: 300px;
+}
+
+.autocomplete-container input {
+  width: 100%;
+  height: 40px;
+  padding: 0 12px;
+  font-size: 18px;
+}
+
+.autocomplete-container .custom-list {
+  width: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.autocomplete-container .custom-list-item {
+  padding: 8px;
+}
+
+.autocomplete-container .custom-list-item:hover {
+  background: lightgrey;
+  cursor: pointer;
+}
